src/test/ui/union/union-with-drop-fields.thirunsafeck.stderr
error[E0740]: unions may not contain fields that need dropping
  --> $DIR/union-with-drop-fields.rs:11:5
   |
LL |     a: String,
   |     ^^^^^^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<String>,
   |        +++++++++++++++++++++++      +

error[E0740]: unions may not contain fields that need dropping
  --> $DIR/union-with-drop-fields.rs:19:5
   |
LL |     a: S,
   |     ^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<S>,
   |        +++++++++++++++++++++++ +

error[E0740]: unions may not contain fields that need dropping
  --> $DIR/union-with-drop-fields.rs:24:5
   |
LL |     a: T,
   |     ^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<T>,
   |        +++++++++++++++++++++++ +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0740`.
